# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  28 Oct 2004; Martin Schlemmer <azarah@gentoo.org>:

    Only add files not managed by udev to device tarball, bug #57110.

  28 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Revert pam_console_apply udev check in bootmisc/halt.sh since 
    the bug is with pam_console_apply and not udev/pam.

    Use ${EUID} instead of $(id -u) to help out BSD in runscript.sh.

    Allow users to select ramfs instead of default tmpfs for mounting 
    on /dev with udev #69091.

    Add issue.devfix which would be auto copied to /etc/issue if 
    /sbin/rc detects the user is missing /dev/null or /dev/console.  
    Includes a simple explanation/fix for what's wrong.

    Make sure the clock init script runs right after checkroot so 
    that timestamps are synchronized asap #68133.

    Accept '-nc' as a short option to '--nocolor' #64736.

  26 Oct 2004; Mike Frysinger <vapier@gentoo.org>:

    Don't use -A with fsck to respect the fs_passno since it'll try 
    to fsck all filesystems, not just the ones specified.  Instead, 
    awk /etc/fstab to review the passno field in checkroot #68822.

    Add support for 'gentoo=forcefsck' boot option in checkroot.

    Make sure we run devfsd in /sbin/rc even when /dev has been 
    automounted by the kernel #68795.

    Don't generate the device tarball in halt.sh with livecds #68469.

  25 Oct 2004; Aron Griffis <agriffis@gentoo.org>:

    net-scripts/net.modules.d/ifconfig:
    - Simplify ifconfig_is_up() 
    - Fix ifconfig_get_aliases_rev() to actually work... you can't
      specify an interface name to ifconfig if you want to see the
      aliases.
    - Workaround a couple ifconfig bugs dealing with aliases
    - Correct a return status in ifconfig_interface_del_addresses()
    - ifconfig_iface_stop() is bool, not void; fix the comments
